[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fox and family.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/skip_icon.png" type="Texture" id=3]
[ext_resource path="res://themes/SelectedPrimaryButton.tres" type="StyleBox" id=4]
[ext_resource path="res://themes/UnSelectedPrimaryButton.tres" type="StyleBox" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 1, 0.933333, 0, 1 )

[node name="Story" type="Node2D"]
script = ExtResource( 6 )

[node name="foxfamily" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 1 )
expand = true

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 130.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.490196 )

[node name="SkipButton" type="Button" parent="."]
margin_left = 280.0
margin_top = 109.0
margin_right = 320.0
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
text = "Skip"
icon = ExtResource( 3 )
expand_icon = true

[node name="StoryLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 135.0
margin_right = 310.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 2 )
text = "JJYY"
align = 1
valign = 1

[node name="NextButton" type="Button" parent="."]
margin_top = 130.0
margin_right = 320.0
margin_bottom = 180.0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )

[connection signal="pressed" from="SkipButton" to="." method="_on_SkipButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
